// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartComponent snapshot close 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1elwnq4-MuiPaper-root-MuiAccordion-root"
  >
    <div
      aria-controls="42-content"
      aria-expanded="false"
      class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
      id=":r1:"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          42
        </h6>
      </div>
      <div
        class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            aria-labelledby=":r1:"
            class="MuiAccordion-region"
            id="42-content"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-fpkvcf-MuiAccordionDetails-root"
            >
              <div
                class="MuiBox-root css-8atqhb"
              >
                <div
                  class="MuiBox-root css-1gsv261"
                >
                  <div
                    class="MuiTabs-root css-tkn350-MuiTabs-root"
                  >
                    <div
                      class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="42-tab"
                        class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="simple-tabpanel-0"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-0"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          19-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-1"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-1"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          20-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-2"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-2"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          21-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-3"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-3"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          22-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-4"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-4"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          23-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-5"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-5"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          24-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-6"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-6"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          25-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="simple-tab-0"
                  id="chart-tabpanel-0"
                  role="tabpanel"
                >
                  <div
                    class="MuiBox-root css-0"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                    />
                    <div
                      class="recharts-responsive-container"
                      style="width: 100%; height: 250px; min-width: 0;"
                    />
                    <p />
                  </div>
                </div>
                <div
                  aria-labelledby="simple-tab-1"
                  hidden=""
                  id="chart-tabpanel-1"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-2"
                  hidden=""
                  id="chart-tabpanel-2"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-3"
                  hidden=""
                  id="chart-tabpanel-3"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-4"
                  hidden=""
                  id="chart-tabpanel-4"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-5"
                  hidden=""
                  id="chart-tabpanel-5"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-6"
                  hidden=""
                  id="chart-tabpanel-6"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartComponent snapshot open 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1elwnq4-MuiPaper-root-MuiAccordion-root"
  >
    <div
      aria-controls="42-content"
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
      id=":r0:"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          42
        </h6>
      </div>
      <div
        class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            aria-labelledby=":r0:"
            class="MuiAccordion-region"
            id="42-content"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-fpkvcf-MuiAccordionDetails-root"
            >
              <div
                class="MuiBox-root css-8atqhb"
              >
                <div
                  class="MuiBox-root css-1gsv261"
                >
                  <div
                    class="MuiTabs-root css-tkn350-MuiTabs-root"
                  >
                    <div
                      class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="42-tab"
                        class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="simple-tabpanel-0"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-0"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          19-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-1"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-1"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          20-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-2"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-2"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          21-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-3"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-3"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          22-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-4"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-4"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          23-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-5"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-5"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          24-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-controls="simple-tabpanel-6"
                          aria-selected="false"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                          id="simple-tab-6"
                          role="tab"
                          tabindex="-1"
                          type="button"
                        >
                          25-03-2023
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="simple-tab-0"
                  id="chart-tabpanel-0"
                  role="tabpanel"
                >
                  <div
                    class="MuiBox-root css-0"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                    />
                    <div
                      class="recharts-responsive-container"
                      style="width: 100%; height: 250px; min-width: 0;"
                    />
                    <p />
                  </div>
                </div>
                <div
                  aria-labelledby="simple-tab-1"
                  hidden=""
                  id="chart-tabpanel-1"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-2"
                  hidden=""
                  id="chart-tabpanel-2"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-3"
                  hidden=""
                  id="chart-tabpanel-3"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-4"
                  hidden=""
                  id="chart-tabpanel-4"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-5"
                  hidden=""
                  id="chart-tabpanel-5"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="simple-tab-6"
                  hidden=""
                  id="chart-tabpanel-6"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
